--- a/modules/sfm/src/libmv_light/libmv/CMakeLists.txt
+++ b/modules/sfm/src/libmv_light/libmv/CMakeLists.txt
@@ -3,4 +3,7 @@ add_subdirectory(correspondence)
 add_subdirectory(multiview)
 add_subdirectory(numeric)
 add_subdirectory(reconstruction)
-add_subdirectory(simple_pipeline)
+
+if ( Ceres_FOUND )
+    add_subdirectory(simple_pipeline)
+endif ()
